Give each executor explicit name